objects/Facility__c/fields/EPA_ID__c.field-meta.xml
<CustomField>
    <fullName>EPA_ID__c</fullName>
    <description>Shows the EPA ID of the Facility</description>
    <label>EPA ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>