objects/Facility__c/fields/Third_Party_Facility__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Facility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Third Party Facility</label>
    <type>Checkbox</type>
</CustomField>