objects/Facility__c/fields/TSDF_Code__c.field-meta.xml
<CustomField>
    <fullName>TSDF_Code__c</fullName>
    <label>TSDF Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>