objects/Facility__c/fields/TSDF_Status__c.field-meta.xml
<CustomField>
    <fullName>TSDF_Status__c</fullName>
    <label>TSDF Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>